--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
                             <mainClass>de.skillkiller.soundextractor.Main</mainClass>
                         </manifest>
                     </archive>
+                    <finalName>mc-sound-extractor</finalName>
                 </configuration>
             </plugin>
             <plugin>
